[gd_scene load_steps=5 format=3 uid="uid://dfn6sijy2qq8n"]

[ext_resource type="Texture2D" uid="uid://4iakeclf4k4b" path="res://utils/ui/menu-header.png" id="1_1anft"]
[ext_resource type="Script" uid="uid://dqn7tfj4acgyi" path="res://utils/ui/main_menu.gd" id="1_wyq4t"]
[ext_resource type="Theme" uid="uid://bes7poiouimn8" path="res://utils/ui/default_theme.tres" id="1_xp5nu"]
[ext_resource type="PackedScene" uid="uid://bn3asyl3o2i63" path="res://utils/ui/fancy_button.tscn" id="4_8naov"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_xp5nu")
script = ExtResource("1_wyq4t")
metadata/_edit_lock_ = true

[node name="BackgroundColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
metadata/_edit_lock_ = true

[node name="StartVBoxContainer" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="TitleSplashTextureRect" type="TextureRect" parent="MarginContainer/StartVBoxContainer"]
layout_mode = 2
texture = ExtResource("1_1anft")
stretch_mode = 3

[node name="StartButton" parent="MarginContainer/StartVBoxContainer" instance=ExtResource("4_8naov")]
layout_mode = 2
text = "Start"

[node name="ContinueButton" type="Button" parent="MarginContainer/StartVBoxContainer"]
visible = false
layout_mode = 2
text = "Continue"

[node name="OptionsButton" type="Button" parent="MarginContainer/StartVBoxContainer"]
layout_mode = 2
text = "Options"

[node name="CreditsButton" type="Button" parent="MarginContainer/StartVBoxContainer"]
layout_mode = 2
text = "Credits
"

[node name="OptionsVBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="OptionsLabel" type="Label" parent="MarginContainer/OptionsVBoxContainer"]
layout_mode = 2
text = "Options"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/OptionsVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/OptionsVBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MarginContainer/OptionsVBoxContainer/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Back to main menu"

[connection signal="pressed" from="MarginContainer/StartVBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/StartVBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/StartVBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MarginContainer/OptionsVBoxContainer/CenterContainer/BackButton" to="." method="_on_back_button_pressed"]
